# NOVEM-Collaborative-Data-Science-Platform

./: .gitignore  README.md
backend/: requirements.txt
backend/accounts/: admin.py  backends.py  badges.py  models.py  serializers.py  urls.py  views.py
backend/analytics/: models.py
backend/audit/: admin.py  helpers.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/connectors/: models.py
backend/core/: admin.py  exceptions.py  middleware.py  permissions.py  services.py  settings.py  urls.py  views.py
backend/projects/: admin.py  badges.py  models.py  serializers.py  urls.py  views.py
backend/templates/: landing.html
backend/workspaces/: admin.py  badges.py  models.py  serializers.py  urls.py  views.py
compute-engine/: requirements.txt
compute-engine/app/: main.py
compute_engine/: main.py  requirements.txt
compute_engine/api/: __init__.py  auth.py  health.py  projects.py  sync.py  workspaces.py
compute_engine/core/: config.py  database.py  system_monitor.py
compute_engine/models/: __init__.py  project.py  sync.py  user.py  workspace.py
compute_engine/services/: __init__.py  backend_client.py  project_service.py  sync_service.py  workspace_service.py
novem-desktop/: LICENSE.md  package-lock.json  package.json
novem-desktop/docs/: CODE_SIGNING.md
novem-desktop/src-tauri/: Cargo.toml  tauri.conf.json
novem-desktop/src-tauri/icons/: icon.icns
novem-desktop/src-tauri/nsis/: installer.nsi
novem-desktop/src-tauri/src/: compute.rs  database.rs  main.rs  python_engine.rs
novem-desktop/src-tauri/src/commands/: mod.rs
(+78 files in other folders)
