[package]
name = "novem-desktop"
version = "0.1.0"
description = "NOVEM - Local-first Collaborative Data Science Platform"
authors = ["NOVEM Team"]
edition = "2021"

[lib]
name = "novem_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1"
log = "0.4"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
